kubernetes/apps/selfhosted/networkpolicies.yaml
---
# Policy for the media namespace:
# allow all ingress and egress to/from selfhosted
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-media-selfhosted
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: media
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: selfhosted
---
# Policy for the selfhosted namespace:
# allow all ingress and egress to/from media
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-selfhosted-media
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: selfhosted
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
